--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 <body>
   <div class="container">
     <section class="hero" role="img" aria-label="Bannerbereich des Projekts">
-      <video autoplay loop muted playsinline poster="https://via.placeholder.com/1400x320.png?text=Video+Fallback" src="assets/kikeriki_ingame.mov"></video>
+      <video autoplay loop muted playsinline poster="https://via.placeholder.com/1400x320.png?text=Video+Fallback" src="assets/ingame.mov"></video>
       <div class="overlay">
-        <h1>Kikeriki!</h1>
+        <h1>Cosmic Rewind – Gamify Your Year in Review</h1>
         <div class="meta">Project Report</div>
       </div>
     </section>
@@ -72,81 +72,60 @@
       <main>
         <div class="card">
           <h2>Introduction</h2>
-          <p>This project investigates the statistical fairness of KIKERIKI, a children’s board game by HABA (2001). Although designed for young players, the game contains probabilistic mechanics that allow for quantitative analysis. The objective of this study was to determine whether the game provides equal winning opportunities for all players, regardless of turn order, rule variants, or game configuration.</p>
+          <p>Cosmic Rewind is an interactive year-in-review project. It was created for a company Christmas party with the goal of presenting personal highlights and lowlights of the year in a creative and entertaining way. Instead of relying on traditional PowerPoint slides, the project transforms the year into a playable game experience that can be enjoyed collectively by the audience.</p>
 
-          <h2>Game Overview</h2>
-          <p>KIKERIKI is a dice-based card collection game using five coloured playing figures, animal cards marked with three coloured dots, and a colour die including a joker symbol. Players roll the die to place matching figures on the active card. Correct rolls allow continued play, while incorrect rolls pass the turn. A card is won when all required colours are placed.</p>
+          <h2>From PowerPoint Karaoke to Game Karaoke</h2>
+          <p>The idea for the project was inspired by the popular concept of “PowerPoint Karaoke.” This idea was reimagined as “Game Karaoke.” Rather than giving a presentation, a colleague plays a game that unfolds the story of the year, while everyone else watches and follows the journey together. This shift from passive viewing to active gameplay creates a more engaging and memorable experience.</p>
 
+          <h2>Game Concept and Metaphor</h2>
+          <p>The game takes the form of a classic space shooter. The player controls a small spaceship traveling through a starry universe that represents the course of the year. Monthly markers guide the journey from January to December, giving the game a clear structure. Asteroids symbolize challenges, while highlights and lowlights represent positive and negative experiences. In this way, the game becomes a metaphor for navigating through a turbulent year. </p>
+          
           <div class="screenshots">
-            <img src="assets/Screenshot_1.png" alt="Projekt-Screenshot 1">
+            <img src="assets/screenshot_3.png" alt="Projekt-Screenshot 1">
           </div>
 
-          <h2>Research Question</h2>
-          <p>The study addressed the following questions:<br>
-            <ul>  
-              <li>Do all players have equal chances of winning cards?</li>
-              <li>Does allowing a player to continue after winning a card affect fairness?</li>
-              <li>Does the starting player have an advantage?</li>
-              <li>How do the number of players and cards influence balance?</li>
-            </ul>
-            </p>
-
-          <h2>Methodology</h2>
-          <p>A Monte Carlo simulation approach was used, running 10,000 simulated games per condition. The simulations varied:<br>
-            <ul>
-              <li>Number of players (2–5)</li>
-              <li>Number of cards (2–18)</li>
-              <li>Turn rules (player continues after winning vs. turn passes)</li>
-            </ul>
-            </p>
-          <p>
-            All players were assumed to behave identically, with outcomes determined solely by chance. Statistical significance was evaluated using two-sample t-tests.</p>
-
-          <h2>Results</h2>
-          <p>
-            <ul>
-              <li>Player Position: No significant advantage was found for any player position across all configurations (p > 0.1).</li>
-              <li>Rule Variants: No significant difference was found between the two turn-taking strategies (p ≈ 0.22).</li>
-              <li>Starting Position: No consistent advantage was observed for the starting player under either rule set (p > 0.1).</li>
-              <li>Game Parameters: Across all tested combinations of players and cards, fewer than 1% of simulations showed significant deviations, attributed to random variation.</li>
-            </ul>
-            </p>
-            <p>
-            Overall, the results indicate strong statistical fairness across all tested conditions.</p>
+          <h2>Gameplay Experience</h2>
+          <p>The gameplay is designed to be simple and intuitive, so that anyone can quickly understand it. The player must dodge asteroids, collect highlights to gain points and health, and avoid lowlights that cause damage. The main objective is to survive until the end of the year, although the game can end earlier if too many collisions occur. At the end of a run, the player receives a summary of captured highlights and avoided lowlights, turning the game into a playful reflection of the year.</p>
 
           <div class="screenshots">
-            <img src="assets/Screenshot_2.png" alt="Projekt-Screenshot 1">
+            <img src="assets/screenshot_1.png" alt="Projekt-Screenshot 1">
           </div>
 
-          <h2>Discussion</h2>
-          <p>The game’s balance is supported by its design: evenly distributed colour requirements, the use of a joker to reduce bad-luck streaks, and independent card rounds prevent systematic advantages. While short-term winning streaks can occur, they do not meaningfully affect long-term outcomes.</p>
+          <h2>Technical Implementation</h2>
+          <p>From a technical perspective, Cosmic Rewind was developed in Python using the Pygame framework. To ensure easy access for all participants, the game was compiled for the web using Pygbag, allowing it to run directly in a browser without installation. One of the main challenges was achieving web compatibility, which was successfully addressed through this approach. The timing of highlights and lowlights is defined in simple dictionaries in the code, making the game easy to customize for different users or events.</p>
 
-          <h2>Conclusion</h2>
-          <p>The analysis demonstrates that KIKERIKI is a statistically fair and robust game. It remains balanced across different player counts, rule variations, and game lengths. The findings confirm that the game offers equal winning opportunities for all players while maintaining an engaging and enjoyable playing experience for both children and adults.</p>
+          <div class="screenshots">
+            <img src="assets/screenshot_2.png" alt="Projekt-Screenshot 1">
+          </div>
+
+          <h2>Outcome and Impact</h2>
+          <p>The finished project is more than just a small game. It provides an interactive and entertaining way to look back on a year, combining humor, creativity, and technical skill. The audience is actively involved in discovering the story behind the events, making it a refreshing alternative to traditional presentations and encouraging discussion and engagement.</p>
+
+          <h2>Conclusion and Future Use</h2>
+          <p>Cosmic Rewind demonstrates how gamification can transform personal reflection into a shared experience. The publicly available source code allows others to adapt the game by adding their own highlights, lowlights, and graphics. As a result, the project serves as both an inspiring example of creative storytelling and a flexible template for anyone who wants to gamify their own year in review.</p>
 
           <div class="tags">
-            <span class="tag">Simulation</span>
             <span class="tag">Data Visualisation</span>
             <span class="tag">Game</span>
           </div>
 
           <div class="links">
-            <a class="btn ghost" href="https://github.com/GeorgVetterGit/kikeriki_analysis" target="_blank" rel="noopener">GitHub</a>
+            <a class="btn ghost" href="https://github.com/GeorgVetterGit/Year_Review" target="_blank" rel="noopener">GitHub</a>
           </div>
         </div>
       </main>
 
       <aside>
         <div class="card">
-          <h2>Test the Game-Simulation Yourself</h2>
-          <p>The game simulation is available online and can be tested directly.</p>
+          <h2>Test the Game Yourself</h2>
+          <p>You control the spaceship with the keyboard, dodging asteroids while collecting highlights to gain points and health and avoiding lowlights that cause damage. The goal is to survive until you reach the end of the year, or score as many points as possible before the game ends.</p>
 
           <div class="sim-list">
             <article class="sim">
-              <div class="thumb">Sim</div>
+              <div class="thumb">Game</div>
               <div>
-                <a href="#" data-src="https://github.com/GeorgVetterGit/kikeriki_analysis/tree/main/build/web/index.html" class="open-sim">Kikeriki Game</a>
-                <small>Explore the game simulation.</small>
+                <a href="#" data-src="https://georgvettergit.github.io/assets/year_review/index.html" class="open-sim">Cosmic Rewind</a>
+                <small>Explore the game.</small>
               </div>
             </article>
 
@@ -163,7 +142,7 @@
   <div id="simModal" class="modal" role="dialog" aria-modal="true" aria-hidden="true">
     <div class="frame" role="document">
       <header>
-        <strong id="simTitle">Simulation</strong>
+        <strong id="simTitle">Cosmic Rewind</strong>
         <div>
           <button id="closeModal" class="btn ghost">Schließen</button>
           <a id="openInTab" class="btn" href="#" target="_blank" rel="noopener">In neuem Tab öffnen</a>
